--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <form class="contact-form">
                 <label class="contact-form-label">
                     <span class="contact-form-label-text"> Имя</span>     
-                    <div class="contact-form-input-wrapper" >
+                    <span class="contact-form-input-wrapper" >
                         
                     <input 
                         type="text"
@@ -402,31 +402,41 @@
                         <svg class="contact-form-ikon" width="18" height="18">
                             <use href="./images/sprite.svg#icon-person"></use>
                         </svg>
-                        </div>
+                        </span>
                 </label>
                 <label class="contact-form-label">
                     <span class="contact-form-label-text"> Телефон</span>
+                    <span class="contact-form-input-wrapper">
                     <input 
-                        type="number"
+                        type="tel"
                         class="contact-form-input"
-                        name="user_phone" 
+                        name="phone_number" 
                         />
+                        <svg class="contact-form-ikon" width="18" height="18">
+                            <use href="./images/sprite.svg#icon-phone"></use>
+                        </svg>
+                        </span>
                 </label>
                 <label class="contact-form-label">
                     <span class="contact-form-label-text"> Почта </span>
+                    <span class="contact-form-input-wrapper">
                     <input 
                         type="mail"
                         class="contact-form-input"
                         name="user_mail"
                         />
+                        <svg class="contact-form-ikon" width="18" height="18">
+                            <use href="./images/sprite.svg#icon-email"></use>
+                        </svg>
+                        </span>
                 </label>
                 <label class="contact-form-label">
                     <span class="contact-form-label-text"> Комментарий</span>
                 <textarea name="user_message" class="contact-form-text" placeholder="Введите текст"></textarea>
                 </label>
                 <div class="contact-form-checkbox-wrapper">
-                    <input type="checkbox" class="contact-form-checkbox" required/>
-                    <label for="" class="contact-form-checkbox-label"
+                    <input name="accept-pilicy" type="checkbox" class="contact-form-checkbox visually-hidden" id="pilicy-checkbox" required/>
+                    <label for="pilicy-checkbox" class="contact-form-checkbox-label "
                     >Соглашаюсь с рассылкой и принимаю <a class="contact-form-checkbox-label-color" href="">Условия договора</a></label>
                 </div>
                 <button type="submit" class="contact-form-submit-btn">Отправить</button>
