--- a/index.html
+++ b/index.html
@@ -379,6 +379,17 @@
                 </li>
             </ul>
         </div>
+        <div class="mail-input">
+            <form>
+                <p class="footer-title">Подпишитесь на рассылку</p>
+                <label class="contact-form-label">
+                        <span class="contact-form-input-wrapper">
+                        <input type="mail" class="contact-form-input" name="user_mail" />
+                    </span>
+                </label>
+                <button type="submit" class="contact-form-submit-btn">Подписаться</button>
+            </form>
+        </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -400,7 +411,7 @@
                         name="user_name"
                         />
                         <svg class="contact-form-ikon" width="18" height="18">
-                            <use href="./images/sprite.svg#icon-person"></use>
+                            <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                         </span>
                 </label>
@@ -413,7 +424,7 @@
                         name="phone_number" 
                         />
                         <svg class="contact-form-ikon" width="18" height="18">
-                            <use href="./images/sprite.svg#icon-phone"></use>
+                            <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                         </span>
                 </label>
@@ -426,7 +437,7 @@
                         name="user_mail"
                         />
                         <svg class="contact-form-ikon" width="18" height="18">
-                            <use href="./images/sprite.svg#icon-email"></use>
+                            <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                         </span>
                 </label>
@@ -437,7 +448,7 @@
                 <div class="contact-form-checkbox-wrapper">
                     <input name="accept-pilicy" type="checkbox" class="contact-form-checkbox visually-hidden" id="pilicy-checkbox" required/>
                     <label for="pilicy-checkbox" class="contact-form-checkbox-label "
-                    >Соглашаюсь с рассылкой и принимаю <a class="contact-form-checkbox-label-color" href="">Условия договора</a></label>
+                    >Соглашаюсь с рассылкой и принимаю&nbsp;<a class="contact-form-checkbox-label-color" href="">Условия договора</a></label>
                 </div>
                 <button type="submit" class="contact-form-submit-btn">Отправить</button>
             </form>
