--- a/index.html
+++ b/index.html
@@ -380,14 +380,19 @@
             </ul>
         </div>
         <div class="mail-input">
-            <form>
-                <p class="footer-title">Подпишитесь на рассылку</p>
-                <label class="contact-form-label">
-                        <span class="contact-form-input-wrapper">
-                        <input type="mail" class="contact-form-input" name="user_mail" />
+            <p class="footer-title">Подпишитесь на рассылку</p>
+            <form class="mail-input-form">
+                <label class="contact-form-label-input">
+                        <span class="contact-form-input-wrapper-input">
+    
+                        <input type="mail" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
                     </span>
                 </label>
-                <button type="submit" class="contact-form-submit-btn">Подписаться</button>
+                <button type="submit" class="contact-form-submit-btn-send">Подписаться
+                    <svg class="modal-inout-icon-send" width="24" height="24">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </button>
             </form>
         </div>
         </div>
