--- a/portfolio.html
+++ b/portfolio.html
@@ -269,6 +269,22 @@
                     </li>
                 </ul>
             </div>
+            <div class="mail-input">
+                <p class="footer-title">Подпишитесь на рассылку</p>
+                <form class="mail-input-form">
+                    <label class="contact-form-label-input">
+                        <span class="contact-form-input-wrapper-input">
+            
+                            <input type="mail" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
+                        </span>
+                    </label>
+                    <button type="submit" class="contact-form-submit-btn-send">Подписаться
+                        <svg class="modal-inout-icon-send" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     
