--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <label class="contact-form-label-input">
                         <span class="contact-form-input-wrapper-input">
     
-                        <input type="mail" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
+                        <input type="email" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
                     </span>
                 </label>
                 <button type="submit" class="contact-form-submit-btn-send">Подписаться
@@ -437,7 +437,7 @@
                     <span class="contact-form-label-text"> Почта </span>
                     <span class="contact-form-input-wrapper">
                     <input 
-                        type="mail"
+                        type="email"
                         class="contact-form-input"
                         name="user_mail"
                         />
