--- a/portfolio.html
+++ b/portfolio.html
@@ -275,7 +275,7 @@
                     <label class="contact-form-label-input">
                         <span class="contact-form-input-wrapper-input">
             
-                            <input type="mail" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
+                            <input type="email" class="contact-form-input-mail" name="user_mail" placeholder="E-mail" />
                         </span>
                     </label>
                     <button type="submit" class="contact-form-submit-btn-send">Подписаться
